Added repo url to website

--- a/contact.html
+++ b/contact.html
@@ -355,7 +355,8 @@
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
           <p class="copyright-text">Copyright &copy; 2020 All Rights. Designed by 
-       <a href="https://www.linkedin.com/in/majumdarnilanjan"><font color = "white">NILANJAN MAJUMDAR</font></a>.
+       <a href="https://www.linkedin.com/in/majumdarnilanjan"><font color = "white">NILANJAN MAJUMDAR</font></a>.   Click me for
+       <a href="https://github.com/codenm007/computergeeks"><font color = "white">GitHub repo!</font></a>.
           </p>
         </div>
 
