--- a/signup.html
+++ b/signup.html
@@ -1,24 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162774024-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-162774024-1');
-</script>
-
-
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap-4.4.1-dist/css/bootstrap.min.css">
 
     <!-- icon packs css AND JS -->
     <link rel="stylesheet" href="stylesheets\icons.css">
@@ -29,7 +17,7 @@
     <link rel = "stylesheet" href = "stylesheets\forms.css">
 
     <!-- fonts css -->
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+    <link href="fonts\monton.css" rel="stylesheet">
 
     <title>Computer GEEKS</title>
     <link rel="icon" href="images\icon1.png" type="image/icon type">
@@ -365,8 +353,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
           <p class="copyright-text">Copyright &copy; 2020 All Rights. Designed by 
-       <a href="https://www.linkedin.com/in/majumdarnilanjan"><font color = "white">NILANJAN MAJUMDAR</font></a>. Click me for
-       <a href="https://github.com/codenm007/computergeeks"><font color = "white">GitHub repo!</font></a>.
+       <a href="https://www.linkedin.com/in/majumdarnilanjan"><font color = "white">NILANJAN MAJUMDAR</font></a>.
           </p>
         </div>
 
@@ -388,8 +375,8 @@
     <script src="javasripts\singup-validate-form.js"></script>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="bootstrap-4.4.1-dist\js\jquery-3.4.1.slim.min.js"></script>
+    <script src="bootstrap-4.4.1-dist\js\bootstrap.bundle.min.js" ></script>
+    <script src="bootstrap-4.4.1-dist\js\bootstrap.min.js"></script>
   </body>
 </html>
