--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+     <!-- this is my google analytics link for tracking users -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162774024-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162774024-1');
+</script>
+    <!-- end of ganalytics -->
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
