added github repo link

--- a/contact.html
+++ b/contact.html
@@ -355,8 +355,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2020 All Rights. Designed by 
+          <p class="copyright-text">Copyright &copy; Designed by 
        <a href="https://www.linkedin.com/in/majumdarnilanjan"><font color = "white">NILANJAN MAJUMDAR</font></a>.
+       Check for <a href="https://github.com/codenm007/computergeeks"><font color = "white">github repo !</font></a>
           </p>
         </div>
 
