--- a/signup.html
+++ b/signup.html
@@ -365,9 +365,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2020 All Rights. Designed by 
-       <a href="https://www.linkedin.com/in/majumdarnilanjan"><font color = "white">NILANJAN MAJUMDAR</font></a>.
-          </p>
+          <p class="copyright-text">Copyright &copy; Designed by 
+            <a href="https://www.linkedin.com/in/majumdarnilanjan"><font color = "white">NILANJAN MAJUMDAR</font></a>.
+            Check for <a href="https://github.com/codenm007/computergeeks"><font color = "white">github repo !</font></a>
+               </p>
         </div>
 
         <div class="col-md-4 col-sm-6 col-xs-12">
