added google searcc console

--- a/signup.html
+++ b/signup.html
@@ -14,6 +14,10 @@
 </script>
     <!-- end of ganalytics -->
 
+     <!-- google search console -->
+     <meta name="google-site-verification" content="-0uTGqRIsnB0U_d42ECJe6w6cd1pV-3c75r1pNrMUMo" />
+     <!-- google search console end -->
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
